--- a/husu.env
+++ b/husu.env
@@ -1,3 +1,7 @@
+STRING_SESSION = "" #ilk olaraq bash s yazın və string sessionu alın
 BOT_TOKEN = "" #@BotFather dən bot yaradıb tokenini bura yazın
 BOT_USERNAME = "" #Botunuzun tag adını bura yazın amma @ qoymayın
+BOTLOG = True
 BOTLOG_CHATID = "" Bir qrup yaradıb qrupun idsini bura yazın
+
+#ƏN SONDA BÜTÜN DƏYƏRLƏRİ DOLDURDUQDAN SONRA bash b YAZIN
