--- a/husu.env
+++ b/husu.env
@@ -1,7 +1,17 @@
-STRING_SESSION = "" #ilk olaraq bash s yazın və string sessionu alın
-BOT_TOKEN = "" #@BotFather dən bot yaradıb tokenini bura yazın
-BOT_USERNAME = "" #Botunuzun tag adını bura yazın amma @ qoymayın
-BOTLOG = True #Botlog istəyirsizsə buna toxunmayın
-BOTLOG_CHATID = "" Bir qrup yaradıb qrupun idsini bura yazın
+# ilk olaraq bash s yazın və string sessionu alın
+STRING_SESSION = ""
+
+# @BotFather dən bot yaradıb tokenini bura yazın
+BOT_TOKEN = ""
+
+# Botunuzun tag adını bura yazın amma @ qoymayın
+BOT_USERNAME = ""
+
+# Botlog istəyirsizsə buna toxunmayın
+BOTLOG = True
+
+# Bir qrup yaradıb qrupun idsini bura yazın 
+# ID nin əvvəli -100 ilə başlamalıdır
+BOTLOG_CHATID = 
 
 #ƏN SONDA BÜTÜN DƏYƏRLƏRİ DOLDURDUQDAN SONRA bash b YAZIN
