--- a/husu.env
+++ b/husu.env
@@ -1,4 +1,4 @@
-# ilk olaraq bash s yazın və string sessionu alın
+# Kopyaladığınız Stringi bura yapışdırın
 STRING_SESSION = ""
 
 # @BotFather dən bot yaradıb tokenini bura yazın
@@ -14,4 +14,4 @@ BOTLOG = True
 # ID nin əvvəli -100 ilə başlamalıdır
 BOTLOG_CHATID = 
 
-#ƏN SONDA BÜTÜN DƏYƏRLƏRİ DOLDURDUQDAN SONRA bash b YAZIN
+#ƏN SONDA HƏR ŞEYİ YAZDIQDAN SONRA CTRL C VURUN
